k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      run: web
  template:
    metadata:
      labels:
        run: web
    spec:
      containers:
      - image: gcr.io/gkerocks/myapp:v2
        imagePullPolicy: IfNotPresent
        name: web
        ports:
        - containerPort: 5000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
